Update working directory for test execution

--- a/.github/workflows/smart-contract-tests.yml
+++ b/.github/workflows/smart-contract-tests.yml
@@ -17,4 +17,5 @@ jobs:
           version: nightly
 
       - name: Run tests
-        run: forge test -vvv
+        working-directory: MemecoinCooker/
+        run: ./forge test -vvv
