Update test command in smart-contract-tests.yml

--- a/.github/workflows/smart-contract-tests.yml
+++ b/.github/workflows/smart-contract-tests.yml
@@ -18,4 +18,4 @@ jobs:
 
       - name: Run tests
         working-directory: MemecoinCooker/
-        run: ./forge test -vvv
+        run: forge test -vvv
