--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/openzeppelin-contracts"]
 	path = lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "MemecoinCooker/lib/openzeppelin-contracts"]
+	path = MemecoinCooker/lib/openzeppelin-contracts
+	url = https://github.com/openzeppelin/openzeppelin-contracts
