--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "MemecoinCooker/lib/openzeppelin-contracts"]
 	path = MemecoinCooker/lib/openzeppelin-contracts
 	url = https://github.com/openzeppelin/openzeppelin-contracts
+[submodule "MemecoinCooker/lib/v2-core"]
+	path = MemecoinCooker/lib/v2-core
+	url = https://github.com/Uniswap/v2-core
