forge install: solidity-lib
v2.1.0

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "MemecoinCooker/lib/v2-periphery"]
 	path = MemecoinCooker/lib/v2-periphery
 	url = https://github.com/Uniswap/v2-periphery
+[submodule "MemecoinCooker/lib/solidity-lib"]
+	path = MemecoinCooker/lib/solidity-lib
+	url = https://github.com/Uniswap/solidity-lib
