Added uniswap v2 contracts (#9)
* forge install: v2-core

v1.0.1

* Refactor MemecoinCooker contract to start to add univ2 deployment

* forge install: v2-periphery

* Refactor MemecoinCooker contract to add Uniswap V2 deployment

* remove cache files

* Add fixtures to allow testing (not complete yet)

* forge install: solidity-lib

v2.1.0

* compilation running well

* Refactor Uniswap imports and add Uniswap V2 deployment in MemecoinCooker.sol

* Added small features

* Add Uniswap V2 deployment and update dependencies

* Refactor MemecoinCooker contract to add initial holders support

* Update forge test command in smart-contract-tests.yml

---------

Co-authored-by: Hicham Bouanani <hicham.bouanani@nuant.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 MemecoinCooker/keys.env
 MemecoinCooker/.env
+MemecoinCooker/cache/
+MemecoinCooker/out/
+MemecoinCooker/broadcast/Myscript.s.sol/11155111/run-latest.json
+MemecoinCooker/broadcast/Myscript.s.sol/11155111/run-1713346032.json
