--- a/MemecoinCooker/foundry.toml
+++ b/MemecoinCooker/foundry.toml
@@ -2,6 +2,8 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+allow_paths = ["*", "/"]
+unchecked_cheatcode_artifacts = true
 
 [rpc_endpoints]
 sepolia = "${SEPOLIA_RPC_URL}"
